[gd_scene load_steps=4 format=3 uid="uid://ihwpqo00o44v"]

[ext_resource type="Script" path="res://cobertor.gd" id="1_h2fco"]
[ext_resource type="Texture2D" uid="uid://cqobvpxex7uwx" path="res://art/itens/cobertorFechado_1.png" id="1_r4dqk"]
[ext_resource type="Texture2D" uid="uid://d7b7ge5mimsh" path="res://art/itens/cobertorAberto_1.png" id="2_eagme"]

[node name="Cobertor" type="Area2D"]
position = Vector2(255, 581)
script = ExtResource("1_h2fco")

[node name="Cobertor_fechado" type="Sprite2D" parent="."]
texture = ExtResource("1_r4dqk")

[node name="Collision_fechado" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(17, 17)
polygon = PackedVector2Array(-0.470588, -8.82353, -5.76471, -3.05882, -6.88235, 6.11765, -3, 8.29412, 5.52941, 10.0588, 3.82353, 2.58824, 1.58824, -3.64706)

[node name="Cobertor_aberto" type="Sprite2D" parent="."]
visible = false
position = Vector2(53, -1)
texture = ExtResource("2_eagme")

[node name="Collision_aberto" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(25, 31)
scale = Vector2(19, 19)
polygon = PackedVector2Array(-1.89474, -9.26316, -5.26316, -5.68421, -5.36842, -4.05263, -1.94737, 1.52632, 0.210528, 5.73684, 0.315791, 8.84211, 0.894739, 9.52632, 2.21053, 9.68421, 2.52632, 4.63158, 2.21053, 1.21053, 1.52632, -1.15789, -0.263156, -4.05263)

[connection signal="input_event" from="." to="." method="_on_input_event"]
